test/error/LexResourceSyntax3.ci
public static class Test
{
	public static bool Run()
	{
		byte[] a = resource<byte>("foo"); //ERROR: Expected LeftBracket, got Greater
		return true;
	}
}
